[package]
name = "synnq_val"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rocksdb = "0.22.0"
reqwest = { version = "0.11", features = ["json"] }  # Enable the JSON feature
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
rsa = "0.5"
anyhow = "1.0.86"
local-ip-address = "0.6.1"
futures = "0.3.30"
env_logger = "0.11.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.63"
