[package]
name = "synnq_val"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rocksdb = "0.22.0"
reqwest = { version = "0.11", features = ["json"] }  # Enable the JSON feature
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
rsa = "0.9.6"
anyhow = "1.0.86"
local-ip-address = "0.6.1"
futures = "0.3.30"
env_logger = "0.11.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.63"
regex = "1.10.6"
ed25519-dalek = "2.1.1"
bip39 = "2.0.0"
sha2 = "0.10.8"
zeroize = "1.8.0"
hex = "0.4.3"
